add about me work and contact

--- a/index.html
+++ b/index.html
@@ -3,9 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faizas Portfolio</title>
+    <title>Faiza Haques Portfolio</title>
 </head>
 <body>
-    
+
+<header><h1> Faiza Haque </h1>
+
+<nav>
+<ul>
+    <li> <a href= "#aboutme" >about me </a></li>
+    <li> <a href= "#work" >work </a></li>
+    <li> <a href="#contact" >contact</a></li>
+</ul>
+</header>
+<section id="aboutfaiza"> <h2>aboutme</h2> </section>
+<div class="section-detail">
+<h2 class="section-title primary-border">About Me</h2>
+
+<div class="profile-picture">
+ <img src="faizasface.jpg" alt="my-face">
+ </div>
+  </div>
+
+ <section id="work">
+  <div class="section-detail">
+    <h2 class="section-title primary-border">work</h2>
+ <img src="purelogo.jpg" alt="purestorage">
+  <p>
+    </p>
+  </div>
+ </section>
+
+
+<section id="contact"
+ <div class="section detail"></div>
+  <h2 class="section-title primary-border">contact</h2>
+<p>
+    🏠 2222 Twnty two steet <br>
+        Tustin CA, 92606     <br>
+    📱 888.444.2222          <br>
+    📧 <a href="dontemailme@gmail.com">dontemailme@gmail.com</a>
+</p>
+</div>
+
+</section>
+
 </body>
+
 </html>
+
+
+    
+
+
+
+
+
+
+
+ 
+
+
+
+
+
