add styling for purelogo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="aboutfaiza">
         <h2>aboutme</h2>
     </section>
-    <div class="section-detail">
+    <div class="about-section">
         <h2 class="section-title primary-border">About Me</h2>
 
         <div>
@@ -34,7 +34,7 @@
     <section id="work">
         <div class="section-detail">
             <h2 class="section-title primary-border">work</h2>
-            <img src="./assets/Images/purelogo.png" alt="purestorage">
+            <img src="./assets/Images/purelogo.png" alt="purestorage" class="purelogo">
             <p>
             </p>
         </div>
