add the small work images and borders

--- a/index.html
+++ b/index.html
@@ -21,35 +21,79 @@
             </ul>
     </header>
     <section id="aboutfaiza">
-        <h2>aboutme</h2>
+        <h2>About Me</h2>
     </section>
     <div class="about-section">
         <h2 class="section-title primary-border">About Me</h2>
 
         <div>
             <img src="./assets/Images/faizasface.jpg" alt="my-face" class="profile-picture">
+            <P> Welcome to my page! <br /> <br />
+                I am slowly making my entrance into the world of code.
+                I have a passion for learning and I wanted to dive a little deeper towards programing and web
+                development. <br /> <br />
+                I graduated from UC Davis with a Bechelors in Communication.
+                I have been employed in the tech industry for 6 years now.
+                Currently, I analyze data for a living. <br /> <br />
+                When I'm not engaged in professional pursuits I love to travel, spend time with family and friends,
+                and experiment with new recipes. <br /> <br />
+            </P>
+
         </div>
     </div>
 
     <section id="work">
         <div class="section-detail">
-            <h2 class="section-title primary-border">work</h2>
+            <h2 class="section-title primary-border">Work</h2>
             <img src="./assets/Images/purelogo.png" alt="purestorage" class="purelogo">
-            <p>
-            </p>
+
         </div>
+
+
+
+        <div class="grid-container">
+            <div class="grid-item grid-big-item">
+                <a target="_blank" href="https://faiza-haque.github.io/Homework-1/">
+                    <img src="./assets/Images/Homework-1.png" alt="Horiseon" class="small-work"><h5>Horiseon Refactoring</h5>
+                </a>
+            </div>
+
+
+            <div class="grid-item grid-big-item">
+                <a target="_blank" href="https://en.wikipedia.org/wiki/Catan">
+                    <img src="./assets/Images/catan.png" alt="Catan" class="small-work"><h5>Favorite Game</h5>
+                </a>
+                </a>
+            </div>
+
+
+
+            <div class="grid-item grid-big-item">
+                <a target="_blank" href="https://en.wikipedia.org/wiki/Microsoft_Excel">
+                    <img src="./assets/Images/excel.png" alt="Excel" class="small-work"><h5>Macro Report</h5>
+                </a>
+            </div>
+
+            <div class="grid-item grid-big-item">
+                <a target="_blank" href="https://en.wikipedia.org/wiki/Chess">
+                    <img src="./assets/Images/chess.png" alt="ChessSet" class="small-work"><h5>Check Mate</h5>
+                </a>
+            </div>
+
+        </div>
+
     </section>
 
 
-    <section id="contact" <div class="section detail">
-        </div>
-        <h2 class="section-title primary-border">contact</h2>
-        <p>
-            🏠 2222 Twnty two steet <br>
-            Tustin CA, 92606 <br>
-            📱 888.444.2222 <br>
-            📧 <a href="dontemailme@gmail.com">dontemailme@gmail.com</a>
-        </p>
+    <section id="contact">
+        <div class="section detail">
+            <h2 class="section-title primary-border">Contact</h2>
+            <p>
+                🏠 2222 Twnty Two Steet <br>
+                Tustin CA, 92606 <br>
+                📱 888.444.2222 <br>
+                📧 <a href="dontemailme@gmail.com">dontemailme@gmail.com</a>
+            </p>
         </div>
 
     </section>
