about me redone

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li> <a href="#contact">contact</a></li>
             </ul>
     </header>
-    <section id="aboutfaiza">
+    <section id="aboutme">
         <h2>About Me</h2>
     </section>
     <div class="about-section">
