works on css again from scratch to figure out bug

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
     </header>
     <section id="aboutme">
-        <h2>About Me</h2>
+
     </section>
     <div class="about-section">
         <h2 class="section-title primary-border">About Me</h2>
@@ -40,53 +40,52 @@
             </P>
 
         </div>
+
+        <section id="work">
+            <div class="grid-container"></div>
+            <section id="work">
+                <div class="section-detail" id="item-1"> </div>
+                <h2 class="section-title primary-border">Work</h2>
+                <img src="./assets/Images/purelogo.png" alt="purestorage" class="purelogo">
+
     </div>
 
-    <section id="work">
-        <div class="section-detail">
-            <h2 class="section-title primary-border">Work</h2>
-            <img src="./assets/Images/purelogo.png" alt="purestorage" class="purelogo">
 
-        </div>
-
-
-
-        <div class="grid-container">
-            <div class="grid-item grid-big-item">
-                <a target="_blank" href="https://faiza-haque.github.io/Homework-1/">
-                    <img src="./assets/Images/Homework-1.png" alt="Horiseon" class="small-work"><h5>Horiseon Refactoring</h5>
-                </a>
-            </div>
+    <div class="grid-item" id="item-2">
+        <a target="_blank" href="https://faiza-haque.github.io/Homework-1/">
+            <img src="./assets/Images/Homework-1.png" alt="Horiseon" class="small-work" height="100%" width="100%">
+                
+        </a>
+    </div>
 
 
-            <div class="grid-item grid-big-item">
-                <a target="_blank" href="https://en.wikipedia.org/wiki/Catan">
-                    <img src="./assets/Images/catan.png" alt="Catan" class="small-work"><h5>Favorite Game</h5>
-                </a>
-                </a>
-            </div>
+    <div class="grid-item" id="item-3">
+        <a target="_blank" href="https://en.wikipedia.org/wiki/Catan">
+            <img src="./assets/Images/catan.png" alt="Catan" class="small-work" height="50%" width="50%">
+        </a>
+    </div>
 
 
 
-            <div class="grid-item grid-big-item">
-                <a target="_blank" href="https://en.wikipedia.org/wiki/Microsoft_Excel">
-                    <img src="./assets/Images/excel.png" alt="Excel" class="small-work"><h5>Macro Report</h5>
-                </a>
-            </div>
+    <div class="grid-item" id="item-4">
+        <a target="_blank" href="https://en.wikipedia.org/wiki/Microsoft_Excel">
+            <img src="./assets/Images/excel.png" alt="Excel" class="small-work" height="50%" width="50%">
+        </a>
+    </div>
 
-            <div class="grid-item grid-big-item">
-                <a target="_blank" href="https://en.wikipedia.org/wiki/Chess">
-                    <img src="./assets/Images/chess.png" alt="ChessSet" class="small-work"><h5>Check Mate</h5>
-                </a>
-            </div>
+    <div class="grid-item" id="item-5">
+        <a target="_blank" href="https://en.wikipedia.org/wiki/Chess">
+            <img src="./assets/Images/chess.png" alt="ChessSet" class="small-work" height="50%" width="50%">
+        </a>
+    </div>
 
-        </div>
+    </div>
 
     </section>
 
 
     <section id="contact">
-        <div class="section detail">
+        <div class="contact-detail">
             <h2 class="section-title primary-border">Contact</h2>
             <p>
                 🏠 2222 Twnty Two Steet <br>
