fix css style sheet and spacinging in contact

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h2 class="section-title primary-border">Contact</h2>
             <p>
                 🏠 2222 Twnty Two Steet <br>
-                Tustin CA, 92606 <br>
+                &nbsp; &nbsp; &nbsp; Tustin CA, 92606 <br>
                 📱 888.444.2222 <br>
                 📧 <a href="dontemailme@gmail.com">dontemailme@gmail.com</a>
             </p>
