fix css and nav bar and readjusted the images

--- a/index.html
+++ b/index.html
@@ -15,75 +15,66 @@
 
         <nav>
             <ul>
-                <li> <a href="#aboutme">about me </a></li>
-                <li> <a href="#work">work </a></li>
+                <li> <a href="#aboutme">about me</a></li>
+                <li> <a href="#work">work</a></li>
                 <li> <a href="#contact">contact</a></li>
             </ul>
+        </nav>
     </header>
     <section id="aboutme">
+        <div class="about-section">
+            <h2 class="section-title primary-border">About Me</h2>
 
-    </section>
-    <div class="about-section">
-        <h2 class="section-title primary-border">About Me</h2>
+            <div>
+                <img src="./assets/Images/faizasface.jpg" alt="my-face" class="profile-picture">
+                <P> Welcome to my page! <br /> <br />
+                    I am slowly making my entrance into the world of code.
+                    I have a passion for learning and I wanted to dive a little deeper towards programing and web
+                    development. <br /> <br />
+                    I graduated from UC Davis with a Bechelors in Communication.
+                    I have been employed in the tech industry for 6 years now.
+                    Currently, I analyze data for a living. <br /> <br />
+                    When I'm not engaged in professional pursuits I love to travel, spend time with family and friends,
+                    and experiment with new recipes. <br /> <br />
+                </P>
 
-        <div>
-            <img src="./assets/Images/faizasface.jpg" alt="my-face" class="profile-picture">
-            <P> Welcome to my page! <br /> <br />
-                I am slowly making my entrance into the world of code.
-                I have a passion for learning and I wanted to dive a little deeper towards programing and web
-                development. <br /> <br />
-                I graduated from UC Davis with a Bechelors in Communication.
-                I have been employed in the tech industry for 6 years now.
-                Currently, I analyze data for a living. <br /> <br />
-                When I'm not engaged in professional pursuits I love to travel, spend time with family and friends,
-                and experiment with new recipes. <br /> <br />
-            </P>
-
+            </div>
         </div>
 
-        <section id="work">
-            <div class="grid-container"></div>
-            <section id="work">
-                <div class="section-detail" id="item-1"> </div>
-                <h2 class="section-title primary-border">Work</h2>
-                <img src="./assets/Images/purelogo.png" alt="purestorage" class="purelogo">
-
-    </div>
-
-
-    <div class="grid-item" id="item-2">
-        <a target="_blank" href="https://faiza-haque.github.io/Homework-1/">
-            <img src="./assets/Images/Homework-1.png" alt="Horiseon" class="small-work" height="100%" width="100%">
-                
-        </a>
-    </div>
-
-
-    <div class="grid-item" id="item-3">
-        <a target="_blank" href="https://en.wikipedia.org/wiki/Catan">
-            <img src="./assets/Images/catan.png" alt="Catan" class="small-work" height="50%" width="50%">
-        </a>
-    </div>
-
-
-
-    <div class="grid-item" id="item-4">
-        <a target="_blank" href="https://en.wikipedia.org/wiki/Microsoft_Excel">
-            <img src="./assets/Images/excel.png" alt="Excel" class="small-work" height="50%" width="50%">
-        </a>
-    </div>
-
-    <div class="grid-item" id="item-5">
-        <a target="_blank" href="https://en.wikipedia.org/wiki/Chess">
-            <img src="./assets/Images/chess.png" alt="ChessSet" class="small-work" height="50%" width="50%">
-        </a>
-    </div>
-
-    </div>
-
     </section>
 
 
+    <section id="work">
+        <h2 class="section-title primary-border">Work</h2>
+        <div class="current-project">
+            <div class="image-container">
+                <img src="./assets/Images/purelogo.png" alt="purestorage" class="purelogo">
+            </div>
+        </div>
+
+        <div class="previous-projects">
+            <div class="image-container">
+                <a target="_blank" href="https://faiza-haque.github.io/Homework-1/">
+                    <img src="./assets/Images/Homework-1.png" alt="Horiseon" class="small-work">
+                </a>
+            </div>
+            <div class="image-container">
+                <a target="_blank" href="https://en.wikipedia.org/wiki/Catan">
+                    <img src="./assets/Images/catan.png" alt="Catan" class="small-work">
+                </a>
+            </div>
+            <div class="image-container">
+                <a target="_blank" href="https://en.wikipedia.org/wiki/Microsoft_Excel">
+                    <img src="./assets/Images/excel.png" alt="Excel" class="small-work">
+                </a>
+            </div>
+            <div class="image-container">
+                <a target="_blank" href="https://en.wikipedia.org/wiki/Chess">
+                    <img src="./assets/Images/chess.png" alt="ChessSet" class="small-work">
+                </a>
+            </div>
+        </div>
+    </section>
     <section id="contact">
         <div class="contact-detail">
             <h2 class="section-title primary-border">Contact</h2>
